# libnrn

./: .gitignore  CLAUDE.md  CMakeLists.txt
examples/: CMakeLists.txt  brunel_network.cpp
include/: nrn.h
include/nrn/: nrn.h
include/nrn/config/: config.h
include/nrn/connectivity/: connect.h  connectivity.h  connectivity_tensor.h  options.h
include/nrn/connectivity/topology/: distance_dependent.h  random.h  topology.h
include/nrn/core/: core.h  device.h  module.h  options.h  state.h  types.h
include/nrn/monitor/: monitor.h  recorder.h  spike_recorder.h  state_recorder.h
include/nrn/network/: network.h  population.h  region.h
include/nrn/neuron/: adex.h  izhikevich.h  lif.h  neuron.h  options.h
include/nrn/plasticity/: options.h  plasticity.h  plasticity_rule.h  stdp.h
include/nrn/simulation/: clock.h  options.h  runner.h  simulation.h  spike_buffer.h
include/nrn/synapse/: ampa.h  double_exponential.h  exponential.h  options.h  static.h  synapse.h
src/: CMakeLists.txt
src/config/: config.cpp
src/connectivity/: connect.cpp  connectivity_tensor.cpp
src/connectivity/topology/: distance_dependent.cpp  random.cpp
src/core/: module.cpp  state.cpp  types.cpp
src/monitor/: recorder.cpp  spike_recorder.cpp  state_recorder.cpp
src/network/: population.cpp  region.cpp
src/neuron/: adex.cpp  izhikevich.cpp  lif.cpp
src/neuron/kernels/: adex_kernel.cu  izhikevich_kernel.cu  lif_kernel.cu
src/plasticity/: plasticity_rule.cpp  stdp.cpp
src/simulation/: clock.cpp  runner.cpp  spike_buffer.cpp
src/synapse/: ampa.cpp  double_exponential.cpp  exponential.cpp  static.cpp
src/synapse/kernels/: synapse_kernels.cu
tests/: CMakeLists.txt  test_adex  test_brunel_network  test_clock  test_connectivity_tensor  test_izhikevich  test_lif  test_module  test_neuron_dynamics  test_spike_buffer  test_state  test_stdp  test_topology  test_types
tests/connectivity/: test_connectivity_tensor.cpp  test_topology.cpp
tests/core/: test_module.cpp  test_state.cpp  test_types.cpp
tests/integration/: test_brunel_network.cpp
tests/neuron/: test_adex.cpp  test_izhikevich.cpp  test_lif.cpp  test_neuron_dynamics.cpp
tests/plasticity/: test_stdp.cpp
tests/simulation/: test_clock.cpp  test_spike_buffer.cpp
